<resources>
    <string name="app_name">Chess</string>
    <string name="board_size_label">Board Size</string>
    <string name="default_board_size" translatable="false">8</string>
    <string name="board_size_hint">Enter board size</string>
    <string name="board_size_error_message">Board size should be between 6 and 16</string>
    <string name="moves_label">Moves</string>
    <string name="default_moves" translatable="false">3</string>
    <string name="moves_hint">Enter maximum moves</string>
    <string name="moves_error_message">Maximum moves should be greater than 0</string>
    <string name="solution_error_message">No solution has been found</string>
    <string name="last_saved_board_size_key" translatable="false">LAST_SAVED_BOARD_SIZE_KEY</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="board_size_preference_key" translatable="false">BOARD_SIZE_PREFERENCE_KEY</string>
    <string name="moves_preference_key" translatable="false">MOVES_PREFERENCE_KEY</string>
    <string name="reset">Reset</string>
    <string name="last_saved_source_x_key" translatable="false">LAST_SAVED_SOURCE_X_KEY</string>
    <string name="last_saved_source_y_key" translatable="false">LAST_SAVED_SOURCE_Y_KEY</string>
    <string name="last_saved_destination_x_key" translatable="false">LAST_SAVED_DESTINATION_X_KEY</string>
    <string name="last_saved_destination_y_key" translatable="false">LAST_SAVED_DESTINATION_Y_KEY</string>
</resources>